Fix text align

--- a/apps/apple-nest-3/src/app/App.scss
+++ b/apps/apple-nest-3/src/app/App.scss
@@ -31,9 +31,16 @@ button {
   min-height: 45px;
 }
 
+
+button:hover {
+  cursor: pointer;
+}
+
 a,
 button {
-  display: inline-block;
+  display: flex;
+  align-items: center; /* Vertical center alignment */
+  justify-content: center; /* Horizontal center alignment */
   border: 2px solid #a9a9a9;
   padding: 0.3em;
   padding-left: 0.8em;
@@ -42,7 +49,6 @@ button {
   background: #000;
   text-decoration: none;
   color: whitesmoke;
-  display: inline-block;
   margin: 0.1em;
 }
 img {
